# crafters

./: .gitignore  Cargo.toml  README.md  pyproject.toml
data/: config.yaml
docs/plans/: 2026-03-17-crafter-long-horizon-parity.md  2026-03-17-crafter-parity-tests.md  2026-03-17-crafter-player-runner.md  2026-03-17-crafter-rs-environment.md  2026-03-17-crafters-python-api.md
python/crafters/: __init__.py  env.py  recorder.py
python_tests/: test_env_api.py
scripts/: generate_reference_fixtures.py
src/: config.rs  entities.rs  game_rules.rs  lib.rs  opensimplex.rs  pillow_resize_16.rs  py_random.rs  python_api.rs  registry.rs  render.rs  runner.rs  types.rs  world.rs  worldgen.rs
tests/: entities.rs  env_basics.rs  gameplay.rs  parity.rs  player_runner.rs  render.rs  worldgen.rs  worldgen_distribution.rs
tests/fixtures/: crafter_reference.json
