[package]
name = "crafter_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "crafter_rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python-module = ["dep:numpy", "dep:pyo3"]

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
minifb = "0.28.0"
noise = "0.9"
numpy = { version = "0.28.0", optional = true }
pyo3 = { version = "0.28.2", optional = true, features = ["extension-module"] }
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
