[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "crafters"
version = "0.1.0"
description = "PyO3-backed Rust Crafter environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.34",
    "numpy>=1.26",
]

[project.optional-dependencies]
gym = ["gym"]

[tool.maturin]
features = ["python-module"]
python-source = "python"
module-name = "crafters._core"
